Minor style changes - fixed shadow clipping issue and changed colour of stream title

--- a/views/assets/css/playback.css
+++ b/views/assets/css/playback.css
@@ -37,7 +37,7 @@ body.zm .ui-dialog .ui-dialog-content { padding: 0; }
 }
 
 .monitor-stream {
-  background-color: #333;
+  background-color: #111;
   border: 1px solid #777;
   -webkit-box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.4);
   box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.4);
@@ -319,11 +319,11 @@ color: #567;
   padding: 0.5rem 0 0;
 }
 
-/* quick fix / hack */
-
 .monitor-streams {
-  margin-top: 1rem;
+  padding-top: 1rem;
 }
+
+/* quick fix / hack */
 
 .monitor-stream {
   display: inline-block;
